--- a/blog.css
+++ b/blog.css
@@ -96,6 +96,10 @@ body {
   color: #000;
 }
 
+.location-stamp a:hover {
+  color: #0000ff;
+}
+
 /* === Blog Layout === */
 .content-wrapper {
   display: flex;
