--- a/blog.css
+++ b/blog.css
@@ -1,55 +1,7 @@
-/* === Reset & Base === */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-::selection {
-  background: black;
-  color: #fff;
-}
-
-body {
-  background: #fff;
-  font-family: "Times New Roman", Times, serif;
-}
-
-/* === Font Face === */
-@font-face {
-  font-family: "Eulyoo";
-  src: url("../fonts/Eulyoo1945-Regular.woff2") format("woff2"),
-    url("../fonts/Eulyoo1945-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* === Header Menu === */
-.header-menu {
-  width: 100vw;
-  display: flex;
-  position: relative;
-  padding: 0 0.625rem;
-}
-
-.menu {
-  width: 25%;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 1.25rem;
-  color: #0000ff;
-  position: relative;
-  padding-bottom: 0.2rem;
-}
-
-.menu a {
-  color: #0000ff;
-  text-decoration: none;
-}
-
-.menu a:hover {
-  background-color: #0000ff;
-  color: #fff;
 }
 
 /* === Language Toggle === */
@@ -60,54 +12,38 @@ body {
   justify-content: flex-end;
 }
 
-/* === Marquee === */
-.marquee-wrapper {
-  width: 100vw;
-  overflow: hidden;
-  padding: 0.625rem;
-}
-
-#marquee {
-  display: flex;
-  white-space: nowrap;
-}
-
-.stamp {
-  display: flex;
-  gap: 0.625rem;
-  margin-right: 0.625rem;
-  font-size: 1.25rem;
-}
-
-.location-stamp {
-  font-family: "Times New Roman", Times, serif;
-  color: #000;
-  position: relative;
-  top: -0.0625rem;
-}
-
-.date-stamp {
-  font-family: "Courier New", Courier, monospace;
-  cursor: default;
-}
-
-.location-stamp a {
-  text-decoration: none;
-  color: #000;
-}
-
-.location-stamp a:hover {
-  color: #0000ff;
-}
-
 /* === Blog Layout === */
 .content-wrapper {
   display: flex;
   width: 100%;
   height: 100%;
-  font-family: "Eulyoo";
+}
+
+.date-list[lang="en"] {
+  font-family: "Unica", serif;
   font-size: 1.25rem;
-  padding: 0 0.325rem;
+}
+
+.blog-entry[lang="en"] {
+  font-family: "Imperial", serif;
+  font-size: 1.25rem;
+}
+
+[lang="en"] em,
+[lang="en"] i,
+[lang="en"] .italic-text {
+  font-style: italic;
+  font-size: 1.26rem;
+}
+
+.date-list[lang="ko"],
+.blog-entry[lang="ko"] {
+  font-family: "Eulyoo", serif;
+  font-size: 1.25rem;
+}
+
+.blog-entry[lang="ko"] {
+  padding-top: 0.4rem;
 }
 
 .date-list {
@@ -119,8 +55,8 @@ body {
 .date {
   display: block;
   cursor: pointer;
-  padding: 0.6rem 0.4rem;
-  color: #000;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem 0 0.4rem 0.5rem;
 }
 
 .date:hover {
@@ -131,15 +67,15 @@ body {
 
 .blog-content {
   width: 75%;
-  margin: 0rem 0.3rem;
   padding-bottom: 20rem;
 }
 
 .blog-entry {
   display: none;
-  width: 60%;
-  line-height: 2;
+  width: 65%;
+  line-height: 1.8;
   word-break: keep-all;
+  transform: translateY(-0.35em);
 }
 
 .blog-entry.active {
@@ -148,4 +84,9 @@ body {
 
 .blog-content a {
   color: #0000ff;
+  text-decoration: none;
+}
+
+.blog-content a:hover {
+  color: #000;
 }
