--- a/info.css
+++ b/info.css
@@ -43,6 +43,7 @@
   text-decoration: none;
   cursor: pointer;
   padding: 0.5rem 0 0.4rem 0.5rem;
+  margin-top: 0.8rem;
 }
 
 .info:hover {
@@ -61,10 +62,10 @@
 .info-entry {
   font-size: 1.25rem;
   width: 50rem;
-  margin: 0 0.125rem 4rem 0;
+  margin: 0.4rem 0.125rem 4rem 0;
   line-height: 1.5;
   word-break: keep-all;
-  scroll-margin-top: 4rem;
+  scroll-margin-top: 4.6rem;
 }
 
 .info-entry a {
